--- a/Syuka-invest/src/main/resources/application-prod.yml
+++ b/Syuka-invest/src/main/resources/application-prod.yml
@@ -24,3 +24,11 @@ spring:
 logging:
   level:
     root: INFO
+
+api:
+  youtube:
+    key: ${YOUTUBE_API_KEY}
+  kis:
+    appkey: ${KIS_APP_KEY}
+    appsecret: ${KIS_APP_SECRET}
+    base-url: https://openapi.koreainvestment.com:9443
